--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,3 +6,5 @@ desktopvideo_download_dir: /opt/desktopvideo/
 desktopvideo_tar: "{{ desktopvideo_download_dir }}/Blackmagic_Desktop_Video_Linux_{{ desktopvideo_version }}.tar.gz"
 desktopvideo_deb_filename: desktopvideo_10.1.4a1_amd64.deb
 desktopvideo_deb: "{{ desktopvideo_download_dir }}/DesktopVideo_{{ desktopvideo_version }}/deb/amd64/{{ desktopvideo_deb_filename }}"
+
+desktopvideo_cleanup: true
